[tool.poetry]
name = "rewardsy-backend"
version = "0.1.0"
description = "fastapi backend for rewardsy"
authors = ["Tejeshwar Reddy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.110.0"}
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
